@@ -1,5 +1,10 @@
 2013-10-14  Carl Hetherington  <cth@carlh.net>
 
+	* Add Rec. 709 colour conversion preset using
+	Wolfgang Woehl's matrix.
+
+2013-10-14  Carl Hetherington  <cth@carlh.net>
+
 	* Version 1.15 released.
 
 2013-10-14  Carl Hetherington  <cth@carlh.net>
